# flask_api_template

./: .coveragerc  .coveralls.yml  .isort.cfg  .pre-commit-config.yaml  .travis.yml  README.md  boot.sh  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  run.py  wsgi.py
.github/workflows/: main.yml
api/: app.py  config.py
api/commons/: exceptions.py
api/commons/decorators/: authentication.py
api/resources/: __init__.py  test.py
app/: __init__.py
app/api_v1/: __init__.py
app/api_v1/resources/: __init__.py  test.py
app/api_v2/: __init__.py
app/api_v2/resources/: __init__.py  test.py
app/commons/: api_template.py  enums.py  exceptions.py
app/commons/decorators/: authentication.py  request_parsers.py
app/controllers/: __init__.py
app/controllers/v1/: test.py
app/libs/: mysql_wrapper.py
app/models/mongo/: __init__.py  base_model.py
app/schemas/: base.py
config/: __init__.py  development.py  production.py  test.py  testing.py
docker/app/: Dockerfile  app.conf
docker/nginx/conf.d/: app.conf
requirements/: common.txt  dev.txt
tests/: __init__.py  conftest.py  test_api_template.py  test_client.py  test_error_http.py  test_http.py
